# aows

./: .gitignore  .nojekyll  101.html  README.md  best-practices.html  ethical-legal.html  index.html  introduction.md  justfile  mkdocs.yml  other-libraries.html  performance.md  philosophy.html  pyproject.toml  search.json  speed-comparison.md  usage.md
aows/parsing/: benchmark6.py  comparison_table.py  complexity.py  implementations.py  memory.py  node_comparison.py  speed.py
docs/: 101.qmd  _quarto.yml  bad-rate-limiting.md  best-practices.qmd  coming-soon.md  ethical-legal.qmd  index.qmd  introduction.md  other-libraries.qmd  philosophy.md  scrapy.md  selectors.qmd
docs/parsing/: _all_elements.qmd  _attribute_access.qmd  _extract_text_all.qmd  _extracting_links.qmd  _links_css.qmd  _parsing_html.qmd  _text_extraction.qmd  bad_html.md  bad_html.qmd  features.md  features.qmd  index.md  index.qmd  intro.md  performance.md  performance.qmd
docs/requests/: caching.md  libraries.md
docs/selectors/: index.qmd
extraction-test/: benchmark6.py  extraction.ipynb  extraction_test.py  pyproject.toml  speed-comparison.md
parsing/: index.html
requests/: index.html
scraping_experiments/: benchmark6.py  extraction.ipynb  node_comparison.py
scraping_experiments/parsing/: benchmark6.py  benchmarks.py  comparison_table.py  implementations.py  memory_benchmark.py  speed.py
selectors/: index.html
site_libs/bootstrap/: bootstrap.min.css
testdata/: README.md  asha_bhosle.html  nba.html  python.html
