[tool.poetry]
name = "aows"
version = "0.1.0"
description = ""
authors = ["James Turk <dev@jamesturk.net>"]
readme = "README.md"
packages = [{include = "aows"}]

[tool.poetry.dependencies]
python = "^3.10"
beautifulsoup4 = "^4.11.1"
lxml = "^4.9.1"
html5lib = "^1.1"
pandas = "^1.5.2"
matplotlib = "^3.6.2"
jupyter = "^1.0.0"
notebook = "^6.5.2"
seaborn = "^0.12.1"
cssselect = "^1.2.0"
tabulate = "^0.9.0"
requests = "^2.28.1"
memray = "^1.5.0"
mkdocs-material = "^8.5.11"
selectolax = "^0.3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
